2003-09-16 Tom Copeland  <tom@infoether.com>

	* www/include/languages/Base.tab:
	Fixed bug [ #500 ] http://gforge.org/docs/site/ = 404

	* common/include/Group.class:
	Fixed bug [ #481 ] Group creation does not rollback 
	if FRSPackage not created

2003-09-15 Tom Copeland  <tom@infoether.com>

	* www/survey/admin/show_questions.php:
	Applied patch [ #498 ] Patch to fix tab problem in surveys

	* www/tracker/add.php:
	Applied patch [ #504 ] May Detailed description be wider 
	in tracker submissions?

2003-09-12 Tom Copeland  <tom@infoether.com>

	* gforge.spec:
	Applied patch [ #516 ] RPM dependency fixes

2003-09-09  Roland Mas  <mas@echo.fr>

	* www/include/languages/French.tab: A few encoding fixes and
	spelling errors.

2003-09-05 Tom Copeland  <tom@infoether.com>

	* common/include/Group.class:
	Fixed bug [ #494 ] "Project Approved" don't send e-mail

	* www/include/features_boxes.php
	Applied patch [ #490 ] Deleted projects can appear inside 
	the "Most Active this week" section

	* www/mail/admin/index.php
	Applied patch [ #497 ] Patch for problems mailing feedback
	 on new project registration (actually, new list creation)

	* www/forum/new.php
	Applied patch [ #502 ] Patch to permit anonymous users to 
	post in forum
	
2003-08-22  Roland Mas  <99.roland.mas@aist.enst.fr>

	* www/include/languages/French.tab: a few UTF-8 fixes;
	* .../Spanish.tab: fixed HTML-escaped HTML tags.

2003-08-15 Tom Copeland  <tom@infoether.com>

	* www/include/languages/Base.tab:
	Fixed bug [ #487 ] Stats graph has funky title
	
	* www/my/index.php:
	Fixed bug [ #488 ] Can't unmonitor forum from 'My Page' link
	
2003-08-14 Michael Jennings  <mej@eterm.org>

	* gforge.spec:
	Updated to 3.0 release.

	* contrib/gforge-3.0-*.patch
	Patches resynced to 3.0 release.

	* contrib/gforge.conf
	Added Apache config file from SRPM.
	
2003-08-12 Tom Copeland  <tom@infoether.com>

	* common/include/User.class:
	Fixed bug [ #480 ] Confirmation email does not reflect language choice
	